# gitinator

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md  settings.json
.github/workflows/: claude-code-review.yml  pr.yml
config/: gunicorn.py  logging_config.py  settings.py  urls.py
gitinator/: apps.py  bootstrap.py  config_sync.py  git.py  http_auth.py  middleware.py  models.py  pack.py  pktline.py  views.py
gitinator/hooks/: __init__.py  protect_default_branch.py  registry.py  sync_config_repos.py  validate_config_repo.py
gitinator/migrations/: 0001_initial.py  0002_gitobject_valid_git_object_type_and_more.py
gitinator/templates/: base.html
gitinator/templates/gitinator/: _file_tree.html  browse_blob.html  browse_empty.html  browse_tree.html  home.html  repo_landing.html
gitinator/tests/: factories.py  test_bootstrap.py  test_browse_views.py  test_config_sync.py  test_git.py  test_git_smart_http_views.py  test_hooks.py  test_pack_and_pktline.py  test_push_permissions.py  test_repo_landing.py  test_validate_config_repo.py
gitinator/views/: __init__.py  browse_views.py  git_smart_http_views.py
spec/: config-repo.md
