[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitinator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Django~=5.2.0",
]

[project.optional-dependencies]
dev = [
    "django-stubs~=5.2.0",
    "ruff~=0.15.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "DJ", "B"]
