[project]
name = "gitinator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Django~=5.2.0",
    "gunicorn~=23.0",
    "pyyaml~=6.0",
]

# Setuptools auto-discovery finds both `gitinator` and `config` (the Django
# settings package) and refuses to build. Explicitly include only `gitinator`.
[tool.setuptools.packages.find]
include = ["gitinator*"]

[project.optional-dependencies]
dev = [
    "django-stubs~=5.2.0",
    "ruff~=0.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "DJ", "B"]
